<resources>
    <string name="app_name">Reserve Ops</string>
    <string name="clearRest">Clear</string>
    <string name="searchRestHint">Search Restaurant</string>
    <string name="openAtRest">Open at %s-%s</string>
    <string name="baseUrl">http://10.0.2.2:8080/app/api/</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_reservation">Reservation</string>
    <string name="welcomeText">Welcome,%1$s</string>
    <string name="userLastReserve">Your Reserves</string>
    <string name="visitsOnRestaurant">Your Visits</string>
    <string name="lastRestaurant">Last Visit In </string>
    <string name="moneySpend">Your Outgoing</string>
    <string name="reserveTable">Reserve a table</string>
    <string name="callRestaurant">Call\nrestaurant</string>
    <string name="webSite">View\nwebsite</string>
    <string name="goToMaps">Show\non map</string>
    <string name="upcomingOrders">Upcoming Reservation</string>
    <string name="myReservation">My Reservations</string>
    <string name="adminReservation">Reservations</string>

    <string name="dateLabel">Date</string>
    <string name="guestLabel">Guests</string>
    <string name="timeLabel">Time</string>
    <string name="wishesEditText">Enter wishes</string>
    <string name="wishesLabel">Wishes</string>
    <string name="reserveBtnTxt">Reserve</string>
    <string name="tableReservation">Table Reservation</string>
    <string name="reservationComplete">Reservation Completed!</string>
    <string name="reservationInfo">Reservation Info</string>
    <string name="userFullNameLbl">Name</string>
    <string name="reservationCompleteOK">OK</string>
    <string name="loginLbl">Log In</string>
    <string name="loginTitleActivity">Enter your Phone Number</string>
    <string name="loginTitleActivity2">We will send you the 4 digits verification code</string>

    <string name="register">New user? <font color="#b71c1c">Register</font></string>
    <string name="registerBtn">Register</string>
    <string name="phoneNumberHint">XXX-XXXXXXX</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="phoneHint">Phone Number</string>
    <string name="registerTitle">Register</string>
    <string name="registerCompleted">Register Completed!</string>
    <string name="errorRegister">Error on registration,Try again</string>
    <string name="loginRegister">Error on login,Try again</string>

    <string name="shared_preference_file_key">cache_ops</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="noUpComingReserve">No Upcoming Reservation</string>
    <string name="restaurantClose">Restaurant is close, working hour is %1$s - %2$s</string>
    <string name="reserveAlert">Can\'t make reservation on %1$s</string>
    <string name="pendingReservation">Pending Reservation</string>
    <string name="todayReservation">Today Reservation</string>
    <string name="reservationWeek">Reservation on this week</string>
    <string name="reservationApprove">Approve</string>
    <string name="reservationDecline">Decline</string>
    <string name="adminTab">Dashboard</string>
    <array name="tabTitles">
        <item>Dashboard</item>
        <item>Reservations</item>
    </array>
    <string name="noReservation">No Reservation</string>
    <string name="noReservationInWeek">No reservation in this week</string>
    <string name="adminActivity">Admin Control</string>
    <string name="errorAction">Something went wrong, try again</string>
    <string name="message_alert">Do you want to close the app?</string>
    <string name="positiveAnswer">Yes</string>
    <string name="negativeAnswer">No</string>

</resources>
