<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ops.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_restaurant"
        android:name="com.ops.ui.fragments.RestaurantFragment"
        android:label="@string/title_restaurant"
        tools:layout="@layout/fragment_restaurant" />

    <fragment
        android:id="@+id/navigation_reservation"
        android:name="com.ops.ui.fragments.ReservationFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reservation" />
</navigation>