<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/backgroundLayout"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_smartphone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginTxt"
            android:textColor="@color/black"
            android:textSize="@dimen/textBigSize"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:fontFamily="@font/exo_regular"
            android:text="@string/loginTitleActivity"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberLayout"
        android:padding="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/backgroundLayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:padding="5dp"
            android:src="@drawable/ic_phone_selector"/>
        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edit_text"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:inputType="phone"
            android:textColor="@color/black"
            android:hint="@string/phoneNumberHint"
            />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:id="@+id/loginBtn"
        android:text="@string/loginLbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarLogin"
       />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/registerTxtView"
        android:text="@string/register"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="@dimen/textDefaultSize"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        android:fontFamily="@font/exo_regular"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>