<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.RestaurantDetails">

    <RelativeLayout
        android:id="@+id/layoutRestaurantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/exo_regular"
            android:id="@+id/restNameTxt"
            android:text="Restaurant Name"
            android:textColor="@color/black"
            android:textSize="@dimen/textBigSize"
            android:textStyle="bold" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:fontFamily="@font/exo_regular"-->
<!--            android:text="9.7"-->
<!--            android:textColor="@color/colorPrimary"-->
<!--            android:textSize="@dimen/textBigSize"-->
<!--            android:textStyle="bold" />-->
    </RelativeLayout>

    <ImageView
        android:id="@+id/restaurantImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutRestaurantName" />

    <RelativeLayout
        android:id="@+id/layoutActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/reserveTableBtn">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/callRestTxtView"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/textSmallSize"
            android:textStyle="bold"
            android:fontFamily="@font/exo_regular"
            android:drawablePadding="5dp"
            android:layout_alignParentStart="true"
            android:text="@string/callRestaurant"
            app:drawableStartCompat="@drawable/ic_outline_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/webSite"
            android:id="@+id/visitWebTxtView"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawablePadding="5dp"
            android:textSize="@dimen/textSmallSize"
            android:fontFamily="@font/exo_regular"
            app:drawableStartCompat="@drawable/ic_web" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToMaps"
            android:id="@+id/showOnMapTxtView"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:drawablePadding="5dp"
            android:textSize="@dimen/textSmallSize"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/exo_regular"
            app:drawableStartCompat="@drawable/ic_outline_location_on" />

    </RelativeLayout>

    <Button
        android:id="@+id/reserveTableBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/exo_regular"
        android:text="@string/reserveTable"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/textDefaultSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>