<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.ReserveActivity">

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo_regular"
                android:text="@string/dateLabel"
                android:textColor="@color/black"
                android:textSize="@dimen/textDefaultSize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/grey_background"
                    android:fontFamily="@font/exo_regular"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:id="@+id/reserveDateTxt"
                    android:text="Today, 20 Mar"
                    android:textColor="@color/colorLight"
                    android:textSize="@dimen/textDefaultSize"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/datePickerLayout"
                    android:background="@drawable/grey_background"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_outline_date_range" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/guestLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/dateLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_regular"
            android:text="@string/guestLabel"
            android:textColor="@color/black"
            android:textSize="@dimen/textDefaultSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/downGuestLayout"
                android:layout_width="47dp"
                android:layout_height="50dp"
                android:background="@drawable/grey_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_minus" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                android:background="@drawable/grey_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/exo_regular"
                    android:text="2"
                    android:id="@+id/reserveGuestTxtView"
                    android:textColor="@color/colorLight"
                    android:textSize="@dimen/textDefaultSize"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/upGuestLayout"
                android:background="@drawable/grey_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutTime"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestLayout">
        <TextView
            android:id="@+id/labelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeLabel"
            android:fontFamily="@font/exo_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/textDefaultSize"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timeRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/labelTime" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/wishesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutTime"
        >

        <TextView
            android:id="@+id/labelWishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_regular"
            android:text="@string/wishesLabel"
            android:textColor="@color/black"
            android:textSize="@dimen/textDefaultSize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/wishesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_background"
            android:gravity="top"
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:hint="@string/wishesEditText"
            android:lines="2" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishesLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/reserveBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/reserveBtnTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />


</androidx.constraintlayout.widget.ConstraintLayout>